# python-practice

./: Readme.md  mypy.ini  pyproject.toml
armstrong-numbers/: armstrong_numbers.py  armstrong_numbers_tdd_test.py  armstrong_numbers_test.py
armstrong-numbers/.exercism/: metadata.json
black-jack/: README.md  black_jack.py  black_jack_tdd_test.py
black-jack/.exercism/: metadata.json
bob/: bob.py  bob_tdd_test.py
bob/.exercism/: metadata.json
collatz-conjecture/: collatz_conjecture.py  collatz_conjecture_tdd_test.py
collatz-conjecture/.exercism/: metadata.json
currency-exchange/: exchange.py
currency-exchange/.exercism/: metadata.json
ghost-gobble-arcade-game/: arcade_game.py  arcade_game_tdd_test.py
ghost-gobble-arcade-game/.exercism/: metadata.json
grains/: grains.py  grainstdd_test.py
grains/.exercism/: metadata.json
guidos-gorgeous-lasagna/: lasagna.py
guidos-gorgeous-lasagna/.exercism/: metadata.json
leap/: leap.py  leap_tdd_test.py
leap/.exercism/: metadata.json
little-sisters-vocab/: README.md  strings.py  strings_tdd_test.py
little-sisters-vocab/.exercism/: metadata.json
meltdown-mitigation/: conditionals.py  conditionals_tdd_test.py
meltdown-mitigation/.exercism/: metadata.json
pig-latin/: pig_latin.py  pig_latin_tdd_test.py  pig_latin_test.py
pig-latin/.exercism/: metadata.json
raindrops/: raindrops.py  raindrops_tdd_test.py
raindrops/.exercism/: metadata.json
returns-practice/: returns_practice.py
scripts/: test.py  watch.py
triangle/: triangle.py  triangle_tdd_test.py  triangle_test.py
(+1 files in other folders)
