[tool.poetry]
name = "exercism"
version = "0.1.0"
description = ""
authors = ["Mathieuka <mathieu.kahlaoui.pro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
watchdog = "^6.0.0"
pytest = "^8.3.4"


[tool.poetry.group.dev.dependencies]
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
